--- a/web/app/themes/tennis-majors-v2/resources/styles/common/facet.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/facet.scss
@@ -6,8 +6,9 @@
 }
 
 .facetwp-radio {
-    background-image: none !important;
     @apply mx-1 my-0 px-6 py-2 border-white border uppercase font-bold text-xs rounded-3xl w-full max-w-max;
+    display: ruby;
+    background-image: none !important;
 }
 
 .facetwp-radio.checked {
