--- a/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
@@ -75,7 +75,7 @@
         }
 
         .title {
-            @apply absolute bottom-8 uppercase font-bold text-sm w-title-video;
+            @apply absolute bottom-4 sm:bottom-8 uppercase font-bold text-sm w-title-video;
         }
     }
 
