--- a/web/app/themes/tennis-majors-v2/resources/styles/common/previous-next-video.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/previous-next-video.scss
@@ -67,3 +67,13 @@
         }
     }
 }
+
+@media only screen and (max-width: 1280px) {
+    .prev-next--next .prev-next--content {
+        background-image: none;
+    }
+
+    .prev-next--prev .prev-next--content {
+        background-image: none;
+    }
+}
