--- a/web/app/themes/tennis-majors-v2/resources/styles/common/facet.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/facet.scss
@@ -1,8 +1,9 @@
 .facetwp-facet {
-    @apply flex overflow-x-auto;
+    @apply overflow-x-auto;
     -webkit-overflow-scrolling: touch;
     -webkit-overflow-scrolling: auto;
-    scroll-snap-type: x mandatory;  
+    scroll-snap-type: x mandatory; 
+    width: -webkit-box;
 }
 
 .facetwp-radio {
