--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -118,6 +118,22 @@
                 @apply not-italic;
             }
         }
+
+        .title-on-image {
+            @apply relative my-12;
+        
+            img {
+                @apply m-0 p-0 w-full;
+            }
+
+            .overlay {
+                @apply absolute w-full h-full top-0 left-0 bg-black opacity-50;
+            }
+
+            .title {
+                @apply absolute top-1/2 left-1/2 text-6xl w-full max-w-screen-lg text-white transform -translate-x-1/2 -translate-y-1/2 text-center;
+            }
+        }
     }
 }
 
