put image in post like a boss

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -119,19 +119,76 @@
             }
         }
 
-        .title-on-image {
+        .wp-block-cover {
             @apply relative my-12;
+
+            &::before {
+                @apply absolute w-full h-full top-0 left-0 bg-black opacity-50;
+                content: "";
+            }
         
-            img {
+            &__image-background {
                 @apply m-0 p-0 w-full;
             }
 
-            .overlay {
-                @apply absolute w-full h-full top-0 left-0 bg-black opacity-50;
+            &__inner-container {
+                p {
+                    @apply absolute top-1/2 left-1/2 text-6xl font-bold uppercase w-full max-w-screen-lg text-white transform -translate-x-1/2 -translate-y-1/2 text-center;
+                }
+            }
+        }
+
+        .wp-block-image {
+            @apply relative max-w-screen-sm m-auto pt-8 pb-12;
+        
+            img {
+                @apply w-full p-0;
             }
 
-            .title {
-                @apply absolute top-1/2 left-1/2 text-6xl w-full max-w-screen-lg text-white transform -translate-x-1/2 -translate-y-1/2 text-center;
+            &.alignwide {
+                @apply max-w-screen-xl m-auto;
+            }
+
+            &.alignfull {
+                @apply max-w-full m-auto;
+            }
+
+            figcaption {
+                @apply absolute bottom-16 right-4 bg-black text-white px-2 pb-1;
+            }
+        }
+
+        .wp-block-gallery {
+            @apply relative max-w-screen-xl m-auto;
+
+            .blocks-gallery-grid {
+                @apply list-none max-w-full grid grid-cols-3 gap-4;
+            }
+
+            .blocks-gallery-item {
+                figure {
+                    @apply relative;
+
+                    img {
+                        @apply p-0;
+                    }
+
+                    figcaption {
+                        @apply absolute bottom-3 right-3 bg-black text-white px-2 pb-1;
+                    }
+                }
+            }
+        
+            img {
+                @apply w-full;
+            }
+
+            &.alignwide {
+                @apply max-w-screen-xl m-auto;
+            }
+
+            &.alignfull {
+                @apply max-w-full m-auto;
             }
         }
     }
