Adds color palette sitewide and usable on blocks

--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -128,3 +128,35 @@
 .number-size-5 {
     font-weight: 300;
 }
+
+.has-australian-open-background-color {
+    background-color: #0088D1;
+}
+
+.has-roland-garros-background-color {
+    background-color: #EE4400;
+}
+
+.has-us-open-background-color {
+    background-color: #0C1F86;
+}
+
+.has-wimbledon-background-color {
+    background-color: #00632A;
+}
+
+.has-australian-open--color {
+    color: #0088D1;
+}
+
+.has-roland-garros--color {
+    color: #EE4400;
+}
+
+.has-us-open--color {
+    color: #0C1F86;
+}
+
+.has-wimbledon--color {
+    color: #00632A;
+}
