--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -76,7 +76,7 @@
     }
 }
 
-.scrolling-touch { -webkit-overflow-scrolling: touch; }
+.scrolling-touch { -webkit-overflow-scrolling: touch; scroll-behavior: smooth; }
 .scrolling-auto { -webkit-overflow-scrolling: auto; }
 
 .snap-type-mandatory  {
