fix ul in content video

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -248,6 +248,14 @@
             }
         }
 
+        ul {
+            @apply list-disc text-xl ml-20;
+        }
+
+        ol {
+            @apply list-decimal text-xl ml-20;
+        }
+
         blockquote.wp-block-quote {
             @apply mt-36 mb-10 md:mb-20 relative px-4 max-w-screen-lg m-auto;
         
