--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -196,3 +196,15 @@
         }
     }
 }
+
+.wpml-menu__list {
+    @apply flex mx-2;
+
+    li {
+        @apply mx-1;
+
+        .active {
+            @apply font-bold;
+        }
+    }
+}
