fix number episodes

--- a/web/app/themes/tennis-majors-v2/resources/styles/common/facet.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/facet.scss
@@ -1,5 +1,9 @@
 .facetwp-facet {
     display: contents;
+
+    &.facetwp-facet-video_types {
+        @apply relative flex mb-0;
+    }
 }
 
 .facetwp-radio {
