--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -27,11 +27,11 @@
         }
 
         ul {
-            @apply list-disc text-xl ml-20;
+            @apply list-disc text-xl pl-20;
         }
 
         ol {
-            @apply list-decimal text-xl ml-20;
+            @apply list-decimal text-xl pl-20;
         }
 
         p {
@@ -249,11 +249,11 @@
         }
 
         ul {
-            @apply list-disc text-xl ml-20;
+            @apply list-disc text-xl pl-20;
         }
 
         ol {
-            @apply list-decimal text-xl ml-20;
+            @apply list-decimal text-xl pl-20;
         }
 
         blockquote.wp-block-quote {
