--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -208,3 +208,51 @@
         }
     }
 }
+
+.live-last-news--toggle {
+
+    .pulse {
+        background-color: #ff0000;
+        border-radius: 50%;
+        box-shadow: 0 0 0 rgba(155, 0, 0, 0.6);
+        animation: pulseanim 1s infinite;
+        width: 0.4rem;
+        height: 0.4rem;
+        position: absolute;
+        left: 50%;
+        bottom: 0.8rem;
+        transform: translateX(-50%);
+        display: none;
+    }
+
+    &:hover {
+        .pulse {
+            animation: none;
+        }
+    }
+
+    &.live-last-news--experienced {
+        .pulse {
+            display: none;
+        }
+    }
+
+    &.live-last-news--not-experienced {
+        .pulse {
+            display: block;
+        }
+    }
+}
+
+
+@keyframes pulseanim {
+    0% {
+        box-shadow: 0 0 0 0 rgba(155, 0, 0, 0.6);
+    }
+    70% {
+        box-shadow: 0 0 0 10px rgba(204,169,44, 0)
+    }
+    100% {
+        box-shadow: 0 0 0 0 rgba(204,169,44, 0)
+    }
+}
