--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -220,8 +220,8 @@
         height: 0.4rem;
         position: absolute;
         left: 50%;
-        bottom: 0.8rem;
-        transform: translateX(-50%);
+        top: 50%;
+        transform: translate(-50%);
         display: none;
     }
 
