thumbnail align metadata

--- a/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
@@ -114,7 +114,7 @@
         }
 
         .content {
-            @apply col-span-8 pt-4;
+            @apply col-span-8 md:pt-4;
         }
 
         .title {
