delete scroll to top on menu mobile

--- a/web/app/themes/tennis-majors-v2/resources/styles/common/menu.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/menu.scss
@@ -60,6 +60,10 @@ header {
             & > .menu-item {
                 @apply text-3xl sm:text-5xl font-bold my-2 uppercase transition-opacity duration-200 ease-in-out max-w-full sm:max-w-1/2;
                 width: max-content;
+
+                a {
+                    cursor: pointer;
+                }
     
                 &.menu-item--active {
                     @apply opacity-100;
