--- a/web/app/themes/tennis-majors-v2/resources/styles/common/pagination.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/pagination.scss
@@ -11,3 +11,19 @@ ul.page-numbers {
         }
     }
 }
+
+.bg-black {
+    ul.page-numbers {
+        @apply flex -mx-1;
+    
+        li {
+            a, span {
+                @apply mx-1 px-3 py-2 text-white uppercase text-xs;
+    
+                &.current {
+                    @apply bg-white rounded-full text-black;
+                }
+            }
+        }
+    }
+}
