Tries to fix  padding vertical on image on read also

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -107,7 +107,7 @@
 
         .read-also {
             img  {
-                @apply mt-0 mb-0 md:mt-0 md:mb-0;
+                @apply mt-0 mb-0 md:mt-0 md:mb-0 md:py-0;
             } 
         }
 
@@ -286,7 +286,7 @@
 
         .read-also {
             img  {
-                @apply mt-0 mb-0 md:mt-0 md:mb-0;
+                @apply mt-0 mb-0 md:mt-0 md:mb-0 md:py-0;
             } 
         }
 
