--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -22,7 +22,7 @@
         }
 
         .wp-block-media-text {
-            @apply flex max-w-screen-sm mx-8 my-auto align-middle;
+            @apply flex max-w-screen-sm mx-8 mx-auto align-middle;
         }
 
         .image-player {
