Fix twitter embeds

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -42,7 +42,9 @@
                 @apply underline text-gray-700 hover:text-black;
             }
         }
-
+        .wp-block-embed__wrapper {
+            max-width: 86% !important;
+        }
         .instagram-media, .twitter-tweet {
             margin: 2rem auto !important;
             width: 100% !important;
