Fix twitter embed

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -44,6 +44,7 @@
         }
         .wp-block-embed__wrapper {
             max-width: 86% !important;
+            @apply m-auto;
         }
         .instagram-media, .twitter-tweet {
             margin: 2rem auto !important;
