--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -13,7 +13,11 @@
             }
         }
 
-        p {
+        .h3-question {
+            @apply mb-0;
+        }
+
+        p, .h3-question {
             @apply px-4 text-xl;
 
             &.h2--sub-title {
@@ -98,7 +102,7 @@
             }
         }
 
-        p {
+        p, .h3-question {
             &.h2--sub-title {
                 @apply text-2xl;
             }
@@ -243,7 +247,7 @@
             }
         }
 
-        p {
+        p, .h3-question {
             &.h2--sub-title {
                 @apply text-2xl;
             }
