Adds expert as guest and updates translation and fix margin

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -33,6 +33,10 @@
             @apply mb-8;
         }
 
+        .wp-block-embed {
+            @apply h-full;
+        }
+
         .image-player {
             @apply absolute block object-cover w-full h-full pt-0 pb-0;
         }
