--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -107,6 +107,10 @@
         max-height: 0;
         overflow: hidden;
     }
+
+    .scroll-mobile {
+        max-width: inherit !important;
+    }
 }
 
 .scroll-mobile {
