--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -1,3 +1,21 @@
+$color-alpha: #e7e7e7;
+$color-white: #fff;
+$color-black: #000;
+
+@mixin link-wired($hovColor, $color: $color-black) {
+    text-decoration: none;
+    color: $color;
+    border-bottom: 1px solid $hovColor;
+    box-shadow: inset 0 -2px 0 $hovColor;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    
+    &:hover,
+    &:focus {
+      background-color: $hovColor;
+    }
+}
+
 .article-container,
 .single-videos {
     .content {
@@ -51,7 +69,7 @@
 
         p {
             a {
-                @apply underline text-gray-700 hover:text-black;
+                @include link-wired($color-alpha);
             }
         }
         .wp-block-embed__wrapper {
