--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -110,6 +110,10 @@
 
     .scroll-mobile {
         max-width: inherit !important;
+
+        &.scroll-mobile-lg {
+            max-width: 1024px !important;
+        }
     }
 }
 
