--- a/web/app/themes/tennis-majors-v2/resources/styles/common/buttons.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/buttons.scss
@@ -7,6 +7,18 @@
         &.btn--arrow-right::after {
             background-image: url(../images/little-arrow-right-white.svg);
         }
+
+        &.btn--arrow-right::before {
+            content: "";
+            @apply absolute bottom-0 left-0 w-0 bg-white transition-all duration-300 ease-in-out;
+            height: 2px;
+        }
+
+        &.btn--arrow-right:hover {
+            &::before {
+                @apply w-full ;
+            }
+        }
     }
 
     &--cta {
@@ -30,6 +42,18 @@
             content: "";
             @apply absolute top-1/2 right-4 w-2 h-3 bg-no-repeat transform -translate-y-1/2;
             background-image: url(../images/little-arrow-right.svg);
+        }
+
+        &::before {
+            content: "";
+            @apply absolute bottom-0 left-0 w-0 bg-black transition-all duration-300 ease-in-out;
+            height: 2px;
+        }
+
+        &:hover {
+            &::before {
+                @apply w-full ;
+            }
         }
     }
 }
