--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -72,8 +72,9 @@ $color-black: #000;
                 @include link-wired($color-alpha);
             }
         }
+
         .wp-block-embed__wrapper {
-            max-width: 86% !important;
+            max-width: 1280px !important;
             @apply m-auto;
         }
         .instagram-media, .twitter-tweet {
@@ -81,9 +82,6 @@ $color-black: #000;
             width: 100% !important;
         }
         
-        iframe {
-            margin: 2rem auto !important;
-        }
         .video-container {
             @apply  relative h-0 pb-16/9 mb-6;
 
@@ -180,7 +178,7 @@ $color-black: #000;
 
             &__inner-container {
                 p {
-                    @apply absolute top-1/2 left-1/2 text-6xl font-bold uppercase w-full max-w-screen-lg text-white transform -translate-x-1/2 -translate-y-1/2 text-center;
+                    @apply absolute top-1/2 left-1/2 text-2xl sm:text-3xl md:text-4xl lg:text-6xl font-bold uppercase w-full max-w-screen-lg text-white transform -translate-x-1/2 -translate-y-1/2 text-center;
                 }
             }
         }
