--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -78,8 +78,9 @@ $color-black: #000;
             @apply m-auto;
         }
         .instagram-media, .twitter-tweet {
-            margin: 2rem auto !important;
+            margin: 2rem 1rem !important;
             width: 100% !important;
+            max-width: calc(100vw - 2rem);
         }
         
         .video-container {
@@ -400,6 +401,7 @@ $color-black: #000;
             .instagram-media, .twitter-tweet {
                 margin: 2rem 1rem !important;
                 width: 100% !important;
+                max-width: calc(100vw - 2rem);
             }
         }
     }
