newsletter label fix

--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -358,4 +358,9 @@
     .checkbox-wrap .nf-field-element label.nf-checked-label::after, .checkbox-wrap .nf-field-label label.nf-checked-label::after, .listcheckbox-wrap .nf-field-element label.nf-checked-label::after, .listcheckbox-wrap .nf-field-label label.nf-checked-label::after {
         border-color: black !important;
     }
+
+    .checkbox-container.label-right label {
+        font-size: 1rem !important;
+        font-weight: normal !important;
+    }
 }
