--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -17,7 +17,7 @@ $color-black: #000;
 }
 
 .article-container,
-.single-videos {
+.single-videos, .single-podcast-episodes {
     .content {
         h2, h3, h4, h5, h6, p, ul, ol, .read-also {
             @apply mb-8 px-4;
@@ -396,7 +396,7 @@ $color-black: #000;
 
 @media only screen and (max-width: 600px) {
     .article-container,
-    .single-videos {
+    .single-videos, .single-podcast-episodes{
         .content {
             .instagram-media, .twitter-tweet {
                 margin: 2rem 1rem !important;
